# safe_unzip

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.sh  safe_unzip_spec.md
.github/workflows/: ci.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_extract.rs  fuzz_zip_adapter.rs
python/: Cargo.toml  pyproject.toml
python/python/safe_unzip/: __init__.py  __init__.pyi
python/src/: lib.rs
python/tests/: test_safe_unzip.py
src/: async_extractor.rs  driver.rs  entry.rs  error.rs  extractor.rs  lib.rs  limits.rs  policy.rs
src/adapter/: mod.rs  sevenz_adapter.rs  tar_adapter.rs  zip_adapter.rs
tests/: policy_test.rs  security_test.rs  tar_test.rs
