[package]
name = "safe_unzip"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tenuo-ai/safe_unzip"
homepage = "https://tenuo.dev"

[dependencies]
# We use path_jail crate for safe directory traversal
path_jail = "0.1" 
zip = "2.1"

[dev-dependencies]
tempfile = "3"

[package.metadata]
authors = ["Niki A. <dev@tenuo.dev>"]