[package]
name = "safe_unzip"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tenuo-ai/safe_unzip"
homepage = "https://tenuo.dev"
authors = ["Niki A. <dev@tenuo.dev>"]
description = "Secure zip extraction. Prevents Zip Slip and Zip Bombs."
keywords = ["zip", "security", "archive", "extraction", "safe"]
categories = ["filesystem", "compression"]

[workspace]
members = [".", "python"]

[dependencies]
path_jail = "0.2"
zip = "2.1"

[dev-dependencies]
tempfile = "3"
